# GeniusTrail

./: .env.prod  .gitattributes  .gitignore  Algorithm - Implementation Using TensorFlow-Like Functionality (Sparse Embedding).py  Algorithm - Sparse Encoding Layer.py  Cognitive Modular Controller - Execution Validation and Learning (EVL).py  Cognitive Modular Controller - Instruction Execution Interface (IEI).py  Dockerfile  GiantRabbit - Code for Sparse Attention Layer to Chain of Thought to Sparse Decoding Layer.py  GiantRabbit - Full Model Training Code.py  GiantRabbit - Reasoning Cost Logging Feature.py  GiantRabbit - Sparse Chain of Thought (CoT) Layer.py  GiantRabbit - Sparse Coding Layer.py  GiantRabbit - Sparse Decoder Layer.py  GiantRabbit - Sparse Embedding Layer.py  GiantRabbit - Sparsemax Implementation in python.py  GiantRabbit - Thought Step.py  GiantRabbit - Training Process for Sparse Coding Layer.py  Interactive Cycle Model - LLMs.py  Multi-Scenario Reasoning - Attention-Based Prioritization.py  Multi-Scenario Reasoning - Memory-Augmented Reasoning.py  Multi-Scenario Reasoning - Multi-Scenario Reasoning - Action Decision Modeling.py  Multi-Scenario Reasoning - Sim2Real.py  README  README.md  Synthetic Data Intervention (Decoder-Only Transformer) - 1.py  Synthetic Data Intervention (Decoder-Only Transformer).py  Targeted Domain Refinement  api_server.py  check_env.py  check_token.py  config.py  conftest.py  deps.txt  detect_language.py  docker-compose.test.yml  dynamic_cot_controller.py  dynamic_cot_controller_example.py  entrypoint.sh  jest.config.js  (+22 more)
CTM-MCP/: Architecture (CTM-MCP).py  Control (NVIDIA Isaac GR00T).py  Experiment (CTM-MCP).py  README  Saycan Dataset (Original Data + Synthetic Data).json
Cognitive Modular Control/: Architecture Code, Running Results and Experimentation  README  (+6 more)
(+203 files in other folders)
