[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veltraxor"
version = "0.1.0"
description = "CLI / API chatbot with Dynamic CoT controller"
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.25.1",
    "httpx>=0.27.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.21.1",
    "pydantic>=1.10.0",
    "pydantic-settings>=2.1.0",    # newly added
    "jsonschema>=4.0.0",           # newly added
    "prometheus-client>=0.14.1",
    "redis>=4.5.0",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.5",
    "ruff>=0.0.241",
    "black>=23.9.1",
    "types-setuptools>=67.0.0",
    "types-requests>=2.25.0",
    "jsonschema>=4.0.0",           # ensure test contract deps
    "pydantic-settings>=2.1.0",    # ensure config.py deps
]

[project.scripts]
veltraxor = "veltraxor:main"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
disallow_any_generics = false
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
exclude = '(^test_.*\\.py$|^tests/)'

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
  \.eggs
 | \.git
 | \.mypy_cache
 | \.venv
 | build
 | dist
)/
'''

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = ["E203", "E501"]

[tool.ruff.per-file-ignores]
"api_server.py" = ["F401", "F841"]
